> COMMIT

# Created

# Refactored
- Dashboard to include Mantine's AppShell, Header, and Navbar

# Imported

## TODO
- Clocking In and Out

## NOTES
- Email Availability Checker @ Form Stepper 1