@@ -1,8 +1,7 @@
 import React from 'react'
 import { useNavigate } from 'react-router-dom'
 import toast from 'react-hot-toast'
-import { Button, Divider, Navbar } from '@mantine/core'
-import { FontAwesomeIcon } from '@fortawesome/react-fontawesome'
+import { Divider, Navbar, NavLink } from '@mantine/core'
 import {
   faSignOutAlt,
   faChartLine,
@@ -12,6 +11,7 @@ import {
 import { useAuth } from '../AuthContext'
 import ButtonLink from './ButtonLink'
 import ButtonOnClick from './ButtonOnClick'
+import { FontAwesomeIcon } from '@fortawesome/react-fontawesome'
 
 const SideNav = ({ isOpened }: { isOpened: boolean }) => {
   const navigate = useNavigate()
@@ -28,6 +28,8 @@ const SideNav = ({ isOpened }: { isOpened: boolean }) => {
       <div className="flex flex-col gap-y-2">
         <ButtonLink value="Dashboard" to="/u/dashboard" icon={faChartLine} />
         <ButtonLink value="History" to="/u/history" icon={faHistory} />
+        <Divider />
+        <ButtonLink value="Profile" to="/u/history" icon={faHistory} />
         <Divider />
         <ButtonOnClick
           value="Logout"
