@@ -1,5 +1,6 @@
 import Login from './Login'
 import Register from './Register'
+import NotFound from './NotFound'
 import Dashboard from './Dashboard'
 
-export { Login, Register, Dashboard }
+export { Login, Register, NotFound, Dashboard }
